@@ -1,15 +1,16 @@
 package uk.gov.di.accountdata.lambda;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
+import uk.gov.di.accountdata.basetest.ApiGatewayHandlerIntegrationTest;
+import uk.gov.di.accountdata.extensions.AuthenticatorExtension;
 import uk.gov.di.authentication.accountdata.lambda.PasskeysCreateHandler;
 import uk.gov.di.authentication.accountdata.services.DynamoPasskeyService;
 import uk.gov.di.authentication.shared.entity.ErrorResponse;
 import uk.gov.di.authentication.shared.serialization.Json;
-import uk.gov.di.authentication.shared.services.SerializationService;
-import uk.gov.di.authentication.sharedtest.basetest.ApiGatewayHandlerIntegrationTest;
-import uk.gov.di.authentication.sharedtest.extensions.AuthenticatorExtension;
+import uk.gov.di.authentication.shared.services.ConfigurationService;
 
 import java.util.Collections;
 import java.util.HashMap;
@@ -20,158 +21,163 @@ import java.util.Optional;
 import static java.lang.String.format;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
+import static uk.gov.di.accountdata.basetest.APIGatewayProxyResponseEventMatcher.hasJsonBody;
 import static uk.gov.di.authentication.accountdata.helpers.CommonTestVariables.CREDENTIAL;
 import static uk.gov.di.authentication.accountdata.helpers.CommonTestVariables.PASSKEY_TRANSPORTS;
 import static uk.gov.di.authentication.accountdata.helpers.CommonTestVariables.PRIMARY_PASSKEY_ID;
 import static uk.gov.di.authentication.accountdata.helpers.CommonTestVariables.PUBLIC_SUBJECT_ID;
 import static uk.gov.di.authentication.accountdata.helpers.CommonTestVariables.TEST_AAGUID;
 import static uk.gov.di.authentication.accountdata.helpers.PasskeysTestHelper.buildGenericPasskeyForUserWithSubjectId;
-import static uk.gov.di.authentication.sharedtest.matchers.APIGatewayProxyResponseEventMatcher.hasJsonBody;
 
 class PasskeysCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegrationTest {
 
-    DynamoPasskeyService dynamoPasskeyService =
-            new DynamoPasskeyService(TEST_CONFIGURATION_SERVICE);
+    private final ConfigurationService configurationService = ConfigurationService.getInstance();
+    DynamoPasskeyService dynamoPasskeyService = new DynamoPasskeyService(configurationService);
 
     @RegisterExtension
     protected static final AuthenticatorExtension authenticatorExtension =
             new AuthenticatorExtension();
 
-    private final Json objectMapper = SerializationService.getInstance();
-
     @BeforeEach
     void setUp() {
-        handler = new PasskeysCreateHandler(TEST_CONFIGURATION_SERVICE);
+        handler = new PasskeysCreateHandler(configurationService);
     }
 
-    @Test
-    void shouldCreatePasskey() throws Json.JsonException {
-        // Given
-        Map<String, String> headers = new HashMap<>();
+    @Nested
+    class Success {
 
-        var requestBody =
-                buildPasskeysCreateRequestBody(
-                        CREDENTIAL,
-                        PRIMARY_PASSKEY_ID,
-                        TEST_AAGUID,
-                        false,
-                        0,
-                        PASSKEY_TRANSPORTS,
-                        false,
-                        false,
-                        false);
-        var expectedSortKey = format("PASSKEY#%s", PRIMARY_PASSKEY_ID);
+        @Test
+        void shouldCreatePasskey() throws Json.JsonException {
+            // Given
+            Map<String, String> headers = new HashMap<>();
 
-        // When
-        var response =
-                makeRequest(
-                        Optional.of(requestBody),
-                        headers,
-                        Collections.emptyMap(),
-                        Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
+            var requestBody =
+                    buildPasskeysCreateRequestBody(
+                            CREDENTIAL,
+                            PRIMARY_PASSKEY_ID,
+                            TEST_AAGUID,
+                            false,
+                            0,
+                            PASSKEY_TRANSPORTS,
+                            false,
+                            false,
+                            false);
+            var expectedSortKey = format("PASSKEY#%s", PRIMARY_PASSKEY_ID);
 
-        // Then
-        assertThat(response.getStatusCode(), equalTo(201));
-        assertThat(response.getBody(), equalTo("Passkey created successfully"));
+            // When
+            var response =
+                    makeRequest(
+                            Optional.of(requestBody),
+                            headers,
+                            Collections.emptyMap(),
+                            Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
 
-        var savedPasskeysForUser = dynamoPasskeyService.getPasskeysForUser(PUBLIC_SUBJECT_ID);
-        var savedPasskey = savedPasskeysForUser.get(0);
+            // Then
+            assertThat(response.getStatusCode(), equalTo(201));
+            assertThat(response.getBody(), equalTo("Passkey created successfully"));
 
-        assertThat(savedPasskey.getCredentialId(), equalTo(PRIMARY_PASSKEY_ID));
-        assertThat(savedPasskey.getSortKey(), equalTo(expectedSortKey));
+            var savedPasskeysForUser = dynamoPasskeyService.getPasskeysForUser(PUBLIC_SUBJECT_ID);
+            var savedPasskey = savedPasskeysForUser.get(0);
+
+            assertThat(savedPasskey.getCredentialId(), equalTo(PRIMARY_PASSKEY_ID));
+            assertThat(savedPasskey.getSortKey(), equalTo(expectedSortKey));
+        }
     }
 
-    @Test
-    void shouldReturn400IfInvalidRequestBody() throws Json.JsonException {
-        // Given
-        Map<String, String> headers = new HashMap<>();
+    @Nested
+    class Error {
+        @Test
+        void shouldReturn400IfInvalidRequestBody() throws Json.JsonException {
+            // Given
+            Map<String, String> headers = new HashMap<>();
 
-        var requestBodyWithNullCredential =
-                buildPasskeysCreateRequestBody(
-                        null,
-                        PRIMARY_PASSKEY_ID,
-                        TEST_AAGUID,
-                        false,
-                        0,
-                        PASSKEY_TRANSPORTS,
-                        false,
-                        false,
-                        false);
+            var requestBodyWithNullCredential =
+                    buildPasskeysCreateRequestBody(
+                            null,
+                            PRIMARY_PASSKEY_ID,
+                            TEST_AAGUID,
+                            false,
+                            0,
+                            PASSKEY_TRANSPORTS,
+                            false,
+                            false,
+                            false);
 
-        // When
-        var response =
-                makeRequest(
-                        Optional.of(requestBodyWithNullCredential),
-                        headers,
-                        Collections.emptyMap(),
-                        Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
+            // When
+            var response =
+                    makeRequest(
+                            Optional.of(requestBodyWithNullCredential),
+                            headers,
+                            Collections.emptyMap(),
+                            Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
 
-        // Then
-        assertThat(response.getStatusCode(), equalTo(400));
-        assertThat(response, hasJsonBody(ErrorResponse.INVALID_REQUEST_BODY));
-    }
+            // Then
+            assertThat(response.getStatusCode(), equalTo(400));
+            assertThat(response, hasJsonBody(ErrorResponse.INVALID_REQUEST_BODY));
+        }
 
-    @Test
-    void shouldReturn409IfPasskeyExists() throws Json.JsonException {
-        // Given
-        Map<String, String> headers = new HashMap<>();
+        @Test
+        void shouldReturn409IfPasskeyExists() throws Json.JsonException {
+            // Given
+            Map<String, String> headers = new HashMap<>();
 
-        dynamoPasskeyService.savePasskeyIfUnique(
-                buildGenericPasskeyForUserWithSubjectId(PUBLIC_SUBJECT_ID, PRIMARY_PASSKEY_ID));
+            dynamoPasskeyService.savePasskeyIfUnique(
+                    buildGenericPasskeyForUserWithSubjectId(PUBLIC_SUBJECT_ID, PRIMARY_PASSKEY_ID));
 
-        var requestBodyWithDuplicatePasskeyId =
-                buildPasskeysCreateRequestBody(
-                        CREDENTIAL,
-                        PRIMARY_PASSKEY_ID,
-                        TEST_AAGUID,
-                        false,
-                        0,
-                        PASSKEY_TRANSPORTS,
-                        false,
-                        false,
-                        false);
+            var requestBodyWithDuplicatePasskeyId =
+                    buildPasskeysCreateRequestBody(
+                            CREDENTIAL,
+                            PRIMARY_PASSKEY_ID,
+                            TEST_AAGUID,
+                            false,
+                            0,
+                            PASSKEY_TRANSPORTS,
+                            false,
+                            false,
+                            false);
 
-        // When
-        var response =
-                makeRequest(
-                        Optional.of(requestBodyWithDuplicatePasskeyId),
-                        headers,
-                        Collections.emptyMap(),
-                        Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
+            // When
+            var response =
+                    makeRequest(
+                            Optional.of(requestBodyWithDuplicatePasskeyId),
+                            headers,
+                            Collections.emptyMap(),
+                            Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
 
-        // Then
-        assertThat(response.getStatusCode(), equalTo(409));
-        assertThat(response, hasJsonBody(ErrorResponse.PASSKEY_ALREADY_EXISTS));
-    }
+            // Then
+            assertThat(response.getStatusCode(), equalTo(409));
+            assertThat(response, hasJsonBody(ErrorResponse.PASSKEY_ALREADY_EXISTS));
+        }
 
-    @Test
-    void shouldReturn422IfInvalidAaguid() throws Json.JsonException {
-        // Given
-        Map<String, String> headers = new HashMap<>();
+        @Test
+        void shouldReturn422IfInvalidAaguid() throws Json.JsonException {
+            // Given
+            Map<String, String> headers = new HashMap<>();
 
-        var requestBodyWithInvalidAaguid =
-                buildPasskeysCreateRequestBody(
-                        CREDENTIAL,
-                        PRIMARY_PASSKEY_ID,
-                        "some-invalid-aaguid",
-                        false,
-                        0,
-                        PASSKEY_TRANSPORTS,
-                        false,
-                        false,
-                        false);
+            var requestBodyWithInvalidAaguid =
+                    buildPasskeysCreateRequestBody(
+                            CREDENTIAL,
+                            PRIMARY_PASSKEY_ID,
+                            "some-invalid-aaguid",
+                            false,
+                            0,
+                            PASSKEY_TRANSPORTS,
+                            false,
+                            false,
+                            false);
 
-        // When
-        var response =
-                makeRequest(
-                        Optional.of(requestBodyWithInvalidAaguid),
-                        headers,
-                        Collections.emptyMap(),
-                        Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
+            // When
+            var response =
+                    makeRequest(
+                            Optional.of(requestBodyWithInvalidAaguid),
+                            headers,
+                            Collections.emptyMap(),
+                            Map.of("publicSubjectId", PUBLIC_SUBJECT_ID));
 
-        // Then
-        assertThat(response.getStatusCode(), equalTo(422));
-        assertThat(response, hasJsonBody(ErrorResponse.INVALID_AAGUID));
+            // Then
+            assertThat(response.getStatusCode(), equalTo(422));
+            assertThat(response, hasJsonBody(ErrorResponse.INVALID_AAGUID));
+        }
     }
 
     private String buildPasskeysCreateRequestBody(
